YEPPBot Release 1.21.1 - ChatGPT 4.0 - Java 21 - Overall Improvements